--- a/src/App.css
+++ b/src/App.css
@@ -13,16 +13,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
@@ -35,4 +25,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.bru {
+  background-color: #012F6B;
+  color: white;
+  
+}
+
+.body1 {
+  padding: 8px;
 }
